added header with a link

--- a/familycards/templates/familycards/index.html
+++ b/familycards/templates/familycards/index.html
@@ -1,5 +1,6 @@
+{% extends 'familycards/base.html' %}
+
 {% block content %}
-   <h2>Family Cards</h2>
    {% if family_members %}
        <ul>
        {% for family_member in family_members %}
