--- a/familycards/templates/familycards/view_member.html
+++ b/familycards/templates/familycards/view_member.html
@@ -1,4 +1,4 @@
-
+{% extends 'familycards/base.html' %}
 
 <h2>{% block head_title %}{{ member.first_name }} {{ member.last_name }}{% endblock %}</h2>
 
