--- a/familycards/templates/familycards/base.html
+++ b/familycards/templates/familycards/base.html
@@ -1,17 +1,31 @@
-
+{% load static %}
 <html>
 
     <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/familycards.css' %}">
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Ubuntu:wght@300&display=swap" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nanum+Gothic+Coding&family=Ubuntu:wght@300&display=swap" rel="stylesheet" type="text/css">
+        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block head_title %}Family Archive{% endblock %}</title>
    </head>
    <body>
-       <h2><a href="{% url 'index' %}">Family Archive</a></h2>
-       <h4><a href="{% url 'view_tree' %}">Family Tree</a></h4> <h4><a href="{% url 'index' %}">Family Cards</a></h4>
-       {% block content %}
 
-       {% endblock %}
+
+          <div class="base">
+              <h2><a href="{% url 'index' %}">Family Cards</a></h2>
+              <h3><a href="{% url 'view_tree' %}">Family Tree</a></h3>
+          </div>
+          <div class="base-add-member">
+              <h3><a href="{% url 'add_members' %}">Add New Family Members</a></h3>
+          </div>
+
+          {% block content %}
+          {% endblock %}
    </body>
 
 
