--- a/familycards/templates/familycards/index.html
+++ b/familycards/templates/familycards/index.html
@@ -1,30 +1,21 @@
 {% extends 'familycards/base.html' %}
-
-<div class="container text-center">
-
 {% block content %}
+
+<div class="index-familymembers-az">
+
    {% if family_members %}
        <ul>
        {% for family_member in family_members %}
+           {% ifchanged family_member.first_name.0 %}<h4>{{family_member.first_name.0}}</h4>{% endifchanged%}
            <li><a href="{% url 'view_member' slug=family_member.slug %}">{{ family_member.first_name }} {{ family_member.last_name }}</a></li>
        {% endfor %}
        </ul>
    {% else %}
-       <p>No family members added</p>
+       <p>no family members added</p>
    {% endif %}
 
-
-    <h2>Add new family members</h2>
-         <form method="post" enctype="multipart/form-data" >
-                {% csrf_token %}
-                {{ family_members_upload.as_p }}
-                <input type="submit" value="Save">
-         </form>
-
-        <form method="post" enctype="multipart/form-data" >
-
-        </form>
 
 </div>
 
 {% endblock %}
+
