--- a/familycards/templates/familycards/view_member.html
+++ b/familycards/templates/familycards/view_member.html
@@ -1,8 +1,15 @@
 {% extends 'familycards/base.html' %}
-
-<h2>{% block head_title %}{{ member.first_name }} {{ member.last_name }}{% endblock %}</h2>
-
 {% block content %}
+
+<div class="member-info">
+
+    <h2>{% block head_title %}{{ member.first_name }} {{ member.last_name }}{% endblock %}</h2><br>
+
+
+    <a class="btn btn-default" href="{% url 'edit_member' slug=member.slug %}">
+        <span class="glyphicon glyphicon-pencil"></span>
+    </a><br><br>
+
     <p><b>Name</b>: {{ member.first_name }} {{ member.other_names }} {{ member.last_name }}, ({{ member.birth_name }})<br>
     <b>Date of birth</b>: {{ member.date_of_birth }}<br>
     <b>Place of birth</b>: {{ member.city_of_birth }}, {{ member.country_of_birth }}<br>
@@ -12,26 +19,30 @@
     <b>Job</b>: {{ member.job }}<br>
     <b>Notes</b>: {{ member.comments }}<br></p>
 
-<p>
-    {% if parents %}
-        <b>Parents</b>:
-        {% for parent in parents %}
-            <li><a href="{% url 'view_member' slug=parent.slug %}">{{ parent.first_name }} {{ parent.last_name }}</a></li>
-         {% endfor %}
-    {% else %}
-        Parents Unknown<br>
-    {% endif %}
-</p>
-<p>
-    {% if partners %}
-        <b>Partners</b>:
-        {% for partner in partners %}
-            <li><a href="{% url 'view_member' slug=partner.slug %}">{{ partner.first_name }} {{ partner.last_name }}</a></li>
-        {% endfor %}
-    {% else %}
-        Partners Unknown<br>
-    {% endif %}
-</p>
+    <p>
+        {% if parents %}
+            <b>Parents</b>:
+            {% for parent in parents %}
+                <li><a href="{% url 'view_member' slug=parent.slug %}">{{ parent.first_name }} {{ parent.last_name }}</a></li>
+             {% endfor %}
+        {% else %}
+            Parents Unknown<br>
+        {% endif %}
+    </p>
+    <p>
+        {% if partners %}
+            <b>Partners</b>:
+            {% for partner in partners %}
+                <li><a href="{% url 'view_member' slug=partner.slug %}">{{ partner.first_name }} {{ partner.last_name }}</a></li>
+            {% endfor %}
+        {% else %}
+            Partners Unknown<br>
+        {% endif %}
+    </p>
+
+
+
+</div>
 
 {% endblock %}
 
