Forms, look and staff

--- a/familycards/templates/familycards/view_tree.html
+++ b/familycards/templates/familycards/view_tree.html
@@ -2,7 +2,29 @@
 
 
 {% block content %}
-{% load static %}
-<img src="{% static tree %}" />
+
+   {% if parents_dict %}
+    <a href="{% url 'view_member' slug=family_member.slug %}">{{ family_member.full_name }}</a>
+       <ul>
+       {% for parents in parents_dict %}
+           <li><a href="{% url view_member slug=parent.slug %}">{{ parent.full_name }}</a></li>
+       {% endfor %}
+       </ul>
+   {% else %}
+       <p>No Parents Found</p>
+   {% endif %}
+
+
+   {% if family_members %}
+       <ul>
+       {% for family_member in family_members %}
+           {% ifchanged family_member.first_name.0 %}<h4>{{family_member.first_name.0}}</h4>{% endifchanged%}
+           <li><a href="{% url 'view_tree' slug=family_member.slug %}"> {{ family_member.full_name }} </a></li>
+       {% endfor %}
+       </ul>
+   {% else %}
+       <p>no family members added</p>
+   {% endif %}
+
 
 {% endblock %}
