Added delete functions, still need to continue

--- a/familycards/templates/familycards/index.html
+++ b/familycards/templates/familycards/index.html
@@ -17,5 +17,12 @@
 
 </div>
 
+
+<div class ='members-functions'>
+    <li><a href="{% url 'delete_all' %}">delete all members</a></li>
+
+
+</div>
+
 {% endblock %}
 
