--- a/familycards/templates/familycards/add_members.html
+++ b/familycards/templates/familycards/add_members.html
@@ -3,11 +3,13 @@
 
  <div class="add-new-members">
 
+
+
         <table style="width:50%">
           <tr>
             <th><h3>Add Family Member</h3></th>
             <th><h3>Import From File</h3></th>
-
+            <th></th>
           </tr>
           <tr>
             <td><form method="post">
@@ -20,7 +22,17 @@
                         {{ family_members_upload.as_p }}
                         <input type="submit" value="Save">
                  </form></td>
+            <td>
 
+            </td>
+
+          </tr>
+          <tr>
+                <td>{% if upload_messages %}
+                    {% for upload_message in upload_messages%}
+                        <li>{{ upload_message }}</li>
+                    {% endfor %}
+                {% endif %}</td>
           </tr>
 
         </table>
