added about page, started tests, added example of header

--- a/familycards/templates/familycards/index.html
+++ b/familycards/templates/familycards/index.html
@@ -10,14 +10,15 @@
        {% endfor %}
        </ul>
    {% else %}
-       <p>No family members added. You can test the app with Hesse Family</p>
+       <p>No family members added. Read <a href="{% url 'about' %}"about how to use the app</p>
    {% endif %}
 </div>
 
 
 <div class ='members-functions'>
-    <li><a href="{% url 'delete_all' %}">delete all family members</a></li>
-    <li><a href="{% url 'export_csv'%}">export all</a></li>
+    <li><a href="{% url 'delete_all' %}">delete all</a></li>
+    <li><a href="{% url 'export_csv' filename='export_family.csv' %}">export all</a></li>
+
 </div>
 
 
