--- a/static/css/familycards.css
+++ b/static/css/familycards.css
@@ -12,6 +12,18 @@
     padding-left: 30px;
 }
 
+.base-about {
+    color: #000000;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 70pt;
+    padding-left: 30px;
+}
+
+
+.about-description p, li {
+    padding-left: 40px;
+    font-family: 'Nanum Gothic Coding', cursive;
+}
 
 .members-functions li {
     padding-left: 30px;
@@ -22,7 +34,6 @@
     padding-left: 30px;
     font-family: 'Nanum Gothic Coding', cursive;
 }
-
 
 .add-new-members {
     padding-left: 30px;
@@ -47,6 +58,8 @@
     font-size: 20pt;
     font-family: 'Nanum Gothic Coding', monospace;
 }
+
+
 
 
 body {
