--- a/familycards/templates/familycards/index.html
+++ b/familycards/templates/familycards/index.html
@@ -10,7 +10,7 @@
        {% endfor %}
        </ul>
    {% else %}
-       <p>No family members added. Read <a href="{% url 'about' %}"about how to use the app</p>
+    No family members added. See <a href="{% url 'about' %}"> how to use the app</a></p>
    {% endif %}
 </div>
 
