refactored code, changed draw tree functions

--- a/familycards/templates/familycards/index.html
+++ b/familycards/templates/familycards/index.html
@@ -20,7 +20,7 @@
 
 <div class ='members-functions'>
     <h4><a href="{% url 'export_csv' filename='export_family.csv' %}">Export all</a></h4>
-    <h4><a href="{% url 'delete_all' %}">Delete All</a></h4><br>
+    <h4><a href="{% url 'delete_all' %}">Delete All</a></h4>
 
 </div>
 
