Fixing graph path

--- a/familycards/templates/familycards/view_tree.html
+++ b/familycards/templates/familycards/view_tree.html
@@ -4,7 +4,7 @@
 {% block content %}
 {% load static %}
 <div class='family-tree'>
-<img src="{% static tree %}" />
+    <img src="{% static 'family_graph.png' %}" alt="Family Tree" />
 </div>
 
 
